kubernetes/nginx/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: nginx
  template:
    metadata:
      labels:
        pod: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.17
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-static-pv
              mountPath: /code/static
            - name: nginx-media-pv
              mountPath: /code/media
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d

      volumes:
        - name: nginx-static-pv
          persistentVolumeClaim:
            claimName: nginx-static-pvc
        - name: nginx-media-pv
          persistentVolumeClaim:
            claimName: nginx-media-pvc
        - name: nginx-config-volume
          configMap:
            name: nginx-configmap
