kubernetes/nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  selector:
    pod: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
