kubernetes/nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-cluster
    kubernetes.io/ingress.class: nginx
  name: nginx-ingress
  namespace: django
spec:
  rules:
  - host: locality-finder.sh4ke.rocks
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - locality-finder.sh4ke.rocks
    secretName: django-tls
